# min_example

./: pyproject.toml  requirements.txt
